@@ -113,6 +113,10 @@ mail.admin = dspace-help@myu.edu
 # inside the email template "charset: <encoding>", otherwise this default is used.
 #mail.charset = UTF8
 
+# A comma separated list of hostnames that are allowed to refer browsers to email forms.
+# Default behaviour is to accept referrals only from dspace.hostname
+#mail.allowed.referrers = localhost
+
 
 # Default language for metadata values
 default.language = en_US
